refact - moved SOA LD flag for bulk print to SOA service from common bulk print service