@@ -8,6 +8,7 @@ import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
 import uk.gov.hmcts.reform.ccd.document.am.model.UploadResponse;
 import uk.gov.hmcts.reform.ccd.document.am.util.InMemoryMultipartFile;
+import uk.gov.hmcts.reform.prl.config.launchdarkly.LaunchDarklyClient;
 import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
 import uk.gov.hmcts.reform.prl.models.Address;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
@@ -21,6 +22,7 @@ import uk.gov.hmcts.reform.prl.models.language.DocumentLanguage;
 import uk.gov.hmcts.reform.prl.services.document.DocumentGenService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 import uk.gov.hmcts.reform.prl.utils.DocumentUtils;
+import uk.gov.hmcts.reform.prl.utils.ElementUtils;
 
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
@@ -54,22 +56,25 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 public class ServiceOfApplicationPostService {
 
     @Autowired
-    private BulkPrintService bulkPrintService;
+    private final BulkPrintService bulkPrintService;
 
     @Autowired
-    private DocumentGenService documentGenService;
+    private final DocumentGenService documentGenService;
 
     @Autowired
-    private DocumentLanguageService documentLanguageService;
+    private final DocumentLanguageService documentLanguageService;
 
     @Autowired
-    private DgsService dgsService;
+    private final DgsService dgsService;
 
     @Autowired
-    private CaseDocumentClient caseDocumentClient;
+    private final CaseDocumentClient caseDocumentClient;
 
     @Autowired
-    private AuthTokenGenerator authTokenGenerator;
+    private final AuthTokenGenerator authTokenGenerator;
+
+    @Autowired
+    private final LaunchDarklyClient launchDarklyClient;
 
     private static final String LETTER_TYPE = "ApplicationPack";
 
@@ -219,33 +224,32 @@ public class ServiceOfApplicationPostService {
 
     private BulkPrintDetails sendBulkPrint(CaseData caseData, String authorisation,
                                           List<Document> docs, Address address, String name, String servedParty) {
-        List<Document> sentDocs = new ArrayList<>();
         ZonedDateTime zonedDateTime = ZonedDateTime.now(ZoneId.of("Europe/London"));
         String currentDate = DateTimeFormatter.ofPattern("dd MMM yyyy HH:mm:ss").format(zonedDateTime);
         String bulkPrintedId = "";
         try {
             log.info("*** Initiating request to Bulk print service ***");
             log.info("*** number of files in the pack *** {}", null != docs ? docs.size() : "empty");
-            UUID bulkPrintId = bulkPrintService.send(
-                String.valueOf(caseData.getId()),
-                authorisation,
-                LETTER_TYPE,
-                docs
-            );
-            log.info("ID in the queue from bulk print service : {}", bulkPrintId);
-            bulkPrintedId = String.valueOf(bulkPrintId);
-            sentDocs.addAll(docs);
-
+            if (launchDarklyClient.isFeatureEnabled("soa-bulk-print")) {
+                log.info("******Bulk print is enabled****");
+                UUID bulkPrintId = bulkPrintService.send(
+                        String.valueOf(caseData.getId()),
+                        authorisation,
+                        LETTER_TYPE,
+                        docs
+                );
+                log.info("ID in the queue from bulk print service : {}", bulkPrintId);
+                bulkPrintedId = String.valueOf(bulkPrintId);
+            }
         } catch (Exception e) {
-            log.info("The bulk print service has failed: {}", e);
+            log.error("The bulk print service has failed", e);
         }
         return BulkPrintDetails.builder()
             .bulkPrintId(bulkPrintedId)
             .servedParty(servedParty)
-            .printedDocs(String.join(",", docs.stream().map(a -> a.getDocumentFileName()).collect(
-                Collectors.toList())))
+            .printedDocs(String.join(",", docs.stream().map(Document::getDocumentFileName).toList()))
             .recipientsName(name)
-            .printDocs(docs.stream().map(e -> element(e)).collect(Collectors.toList()))
+            .printDocs(docs.stream().map(ElementUtils::element).toList())
             .postalAddress(address)
             .timeStamp(currentDate).build();
     }
